<resources>
    <string name="app_name">MiaQuiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Mail</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter ou s\'enregistrer</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="welcome">"Bienvenue !"</string>
    <string name="invalid_username">Utilisateur invalide</string>
    <string name="invalid_password">Votre mot de passe doit contenir au minimum 5 caractères</string>
    <string name="login_failed">"Impossible de se connecter"</string>
    <string name="animals">Animaux</string>
    <string name="pseudo">Pseudo</string>
    <string name="commencer">Commencer</string>
    <string name="valider">Valider</string>
    <string name="identifie_toi_avec_ton_pseudo">Identifie toi avec ton pseudo</string>
    <string name="admin">Administration</string>
    <string name="upDateMessage">Met à jour la base de données des chats</string>
    <string name="inputCat">Chat</string>
</resources>